fix: minor UI bugs in login and transaction page - modify to black login font label - avoid header overlap in add transaction page

--- a/frontend/pos-final/src/pages/transactions/transaction.css
+++ b/frontend/pos-final/src/pages/transactions/transaction.css
@@ -115,7 +115,7 @@ color: black;
 }
 
 .tablePurchase{
-margin-top: 200px;
-max-height: 390px;
+margin-top: 300px;
+max-height: 290px;
 overflow-y: scroll;
 }
